--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   
   <body>
-    <a href="/"><div class="header">Turtle UI</div></a>
+    <a href="/"><div class="header"><img src="assets/turtle.PNG" width="50px"></img><span style="padding-left: 20px;">Turtle UI</span></div></a>
     
     <form id="dataForm">
         <input id="mapData" type="text" name="mapData">
