--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     
-    <link rel="stylesheet" href="style/index.css">
+    <link rel="stylesheet" type="text/css" href="./style/index.css">
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="scripts/convertMap.js"></script>
+    <script src="/scripts/convertMap.js"></script>
   </head>
   
   <body>
