Controller Server Code

--- a/controller.html
+++ b/controller.html
@@ -18,6 +18,7 @@
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="/scripts/convertMap.js"></script>
+    <script src="/scripts/controller.js"></script>
   </head>
   
   <body>
@@ -26,7 +27,7 @@
     <div class="controller">
         <div class="control center noselect" style="margin-bottom:10px;">&#8593;</div>
         <div class="control inline noselect" style="margin-right:10px;">&#8249;</div>
-        <div class="control inline noselect">| |</div>
+        <div class="control inline noselect" action="stop" >| |</div>
         <div class="control inline noselect" style="margin-left:10px;">&#8250;</div>
         <div class="control center noselect" style="margin-top:10px;">&#8595;</div>
     </div>
