Controller Server Code Working With Limits

--- a/controller.html
+++ b/controller.html
@@ -25,11 +25,11 @@
     <a href="/"><div class="title"><img src="assets/turtle.PNG" width="50px"></img><span style="padding-left: 20px;">Turtle UI</span></div></a>
     
     <div class="controller">
-        <div class="control center noselect" style="margin-bottom:10px;">&#8593;</div>
-        <div class="control inline noselect" style="margin-right:10px;">&#8249;</div>
-        <div class="control inline noselect" action="stop" >| |</div>
-        <div class="control inline noselect" style="margin-left:10px;">&#8250;</div>
-        <div class="control center noselect" style="margin-top:10px;">&#8595;</div>
+        <div class="control center noselect" style="margin-bottom:10px;" controlId="1">&#8593;</div>
+        <div class="control inline noselect" style="margin-right:10px;" controlId="3">&#8249;</div>
+        <div class="control inline noselect" action="stop" controlId="0">| |</div>
+        <div class="control inline noselect" style="margin-left:10px;" controlId="4">&#8250;</div>
+        <div class="control center noselect" style="margin-top:10px;" controlId="2">&#8595;</div>
     </div>
     
     <div class="bot">Developed by Group 5</div>
