Added Link to Controller

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <br/><br/>
         
         <div class="submit" class="noselect" onclick="run(2)"> Default Map </div> 
+        <br/><br/>
+        <center><a href="/controller"><span style="font-size:20px; color: blue; border-bottom: 1px solid blue;">controller</span></a></center>
     </form>
     
     <canvas id="map" width="864px;" height="736px" style="context.lineWidth = 1;"></canvas>
